Fix event item spacing

--- a/_assets/styles/global.scss
+++ b/_assets/styles/global.scss
@@ -237,7 +237,7 @@
 }
 
 .event-item {
-  margin: 16px auto;
+  margin: 0 0 16px 0;
 
   h3,
   p {
